--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,17 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.PersonalInformationActivity"></activity>
         <activity android:name=".activity.CreateChannelActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".activity.ChannelSettingActivity"></activity>
         <activity android:name=".activity.GuideActivity" />
         <activity android:name=".activity.LaunchActivity" />
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.MainActivity" >
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity android:name=".utils.PermissionGainActivity" />
 
         <service android:name=".service.SOMPService" />
